correction function get_rate_from_column

--- a/challenge/exploration.ipynb
+++ b/challenge/exploration.ipynb
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,12 +865,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is an error in the rate of delayed flights from the function get_rate_from_column. In the second `for` loop, when the number of delays is divided by the number of flights by country, the formula used is `total / delays[name]`. The graphs show that the corrected delay rate by the number of flights by country is: `(delays[name] / total) * 100`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For example, in the case of the city Ciudad de Panama:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tasa (%)    15.95\n",
+       "Name: Ciudad de Panama, dtype: float64"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "destination_rate = get_rate_from_column(data, \"SIGLADES\")\n",
+    "destination_rate.loc['Ciudad de Panama']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_rate_from_column(data, column):\n",
+    "def fixed_get_rate_from_column(data, column):\n",
     "    delays = {}\n",
     "    for _, row in data.iterrows():\n",
     "        if row[\"delay\"] == 1:\n",
@@ -891,6 +927,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tasa (%)    6.27\n",
+       "Name: Ciudad de Panama, dtype: float64"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "destination_rate = fixed_get_rate_from_column(data, \"SIGLADES\")\n",
+    "destination_rate.loc['Ciudad de Panama']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a change from 15.95 to 6.27 in the delay rate."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
@@ -906,7 +971,7 @@
     }
    ],
    "source": [
-    "destination_rate = get_rate_from_column(data, \"SIGLADES\")\n",
+    "destination_rate = fixed_get_rate_from_column(data, \"SIGLADES\")\n",
     "destination_rate_values = data[\"SIGLADES\"].value_counts().index\n",
     "plt.figure(figsize=(20, 5))\n",
     "sns.set_theme(style=\"darkgrid\")\n",
@@ -935,7 +1000,7 @@
     }
    ],
    "source": [
-    "airlines_rate = get_rate_from_column(data, \"OPERA\")\n",
+    "airlines_rate = fixed_get_rate_from_column(data, \"OPERA\")\n",
     "airlines_rate_values = data[\"OPERA\"].value_counts().index\n",
     "plt.figure(figsize=(20, 5))\n",
     "sns.set_theme(style=\"darkgrid\")\n",
@@ -964,7 +1029,7 @@
     }
    ],
    "source": [
-    "month_rate = get_rate_from_column(data, \"MES\")\n",
+    "month_rate = fixed_get_rate_from_column(data, \"MES\")\n",
     "month_rate_value = data[\"MES\"].value_counts().index\n",
     "plt.figure(figsize=(20, 5))\n",
     "sns.set_theme(style=\"darkgrid\")\n",
@@ -994,7 +1059,7 @@
     }
    ],
    "source": [
-    "days_rate = get_rate_from_column(data, \"DIANOM\")\n",
+    "days_rate = fixed_get_rate_from_column(data, \"DIANOM\")\n",
     "days_rate_value = data[\"DIANOM\"].value_counts().index\n",
     "\n",
     "sns.set_theme(style=\"darkgrid\")\n",
@@ -1025,7 +1090,7 @@
     }
    ],
    "source": [
-    "high_season_rate = get_rate_from_column(data, \"high_season\")\n",
+    "high_season_rate = fixed_get_rate_from_column(data, \"high_season\")\n",
     "high_season_rate_values = data[\"high_season\"].value_counts().index\n",
     "\n",
     "plt.figure(figsize=(5, 2))\n",
@@ -1056,7 +1121,7 @@
     }
    ],
    "source": [
-    "flight_type_rate = get_rate_from_column(data, \"TIPOVUELO\")\n",
+    "flight_type_rate = fixed_get_rate_from_column(data, \"TIPOVUELO\")\n",
     "flight_type_rate_values = data[\"TIPOVUELO\"].value_counts().index\n",
     "plt.figure(figsize=(5, 2))\n",
     "sns.set_theme(style=\"darkgrid\")\n",
@@ -1085,7 +1150,7 @@
     }
    ],
    "source": [
-    "period_day_rate = get_rate_from_column(data, \"period_day\")\n",
+    "period_day_rate = fixed_get_rate_from_column(data, \"period_day\")\n",
     "period_day_rate_values = data[\"period_day\"].value_counts().index\n",
     "plt.figure(figsize=(5, 2))\n",
     "sns.set_theme(style=\"darkgrid\")\n",
@@ -1359,31 +1424,6 @@
     "    axis=1,\n",
     ")\n",
     "target = data[\"delay\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    0\n",
-       "1    0\n",
-       "2    0\n",
-       "3    0\n",
-       "4    0\n",
-       "Name: delay, dtype: int32"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "target.head()"
    ]
   },
   {
