adding conclusion of which model is better

--- a/challenge/exploration.ipynb
+++ b/challenge/exploration.ipynb
@@ -2419,12 +2419,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Given that the two models, `LogisticRegression` and `XGBoost`, have similar performance using feature importance and balancing classes, it is difficult to decide which model should be deployed to production. That is why more analysis is needed."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In order to decide which model is better, I will analyzing them using cross-validation, specifically `StratifiedKFold` implemented in scikit-learn librery. This version maintains the distribution of the original dataset in each partition during the training loop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross-Validation"
+   ]
   },
   {
    "cell_type": "code",
@@ -3003,8 +3014,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above table in the image presents the performance metrics of two binary classification models, Logistic Regression and XGBoost, evaluated using a 5-fold stratified cross-validation approach. The positive class represents delayed flights, which are much less frequent than the negative class (on-time flights), indicating a class imbalance problem. The key metrics shown in the table are accuracy, precision, recall, F1-score, support, macro average, and weighted average for each fold in each classifier.\n",
+    "\n",
+    "##### Metrics and Results\n",
+    "\n",
+    "- Accuracy: Measures the proportion of correctly classified instances out of the total instances.\n",
+    "\n",
+    "- Precision: The ratio of true positive predictions to the total predicted positives. It indicates how many of the predicted delayed flights were actually delayed.\n",
+    "\n",
+    "- Recall: The ratio of true positive predictions to the total actual positives. It shows how many of the actual delayed flights were correctly identified.\n",
+    "\n",
+    "- F1-Score: The harmonic mean of precision and recall, providing a balance between the two metrics.\n",
+    "\n",
+    "- Support: The number of actual occurrences of each class in the dataset.\n",
+    "\n",
+    "- Macro Average: The average of the metric (precision, recall, F1-score) calculated for each class independently.\n",
+    "\n",
+    "- Weighted Average: The average of the metric (precision, recall, F1-score) weighted by the number of instances in each class.\n",
+    "\n",
+    "##### Results for Each Model\n",
+    "\n",
+    "##### Logistic Regression\n",
+    "\n",
+    "- Fold 1 to 5: The metrics for each fold are provided, showing variations in precision, recall, F1-score, and accuracy.\n",
+    "- Macro Average and Weighted Average: These averages are calculated across all folds, providing an overall performance measure.\n",
+    "\n",
+    "##### XGBoost\n",
+    "\n",
+    "- Fold 1 to 5: Similar to Logistic Regression, the metrics for each fold are provided.\n",
+    "- Macro Average and Weighted Average: These averages are calculated across all folds, providing an overall performance measure.\n",
+    "\n",
+    "##### Conclusion\n",
+    "\n",
+    "To determine which model performs better, comparing the overall performance metrics across the two models. \n",
+    "\n",
+    "- Accuracy: XGBoost generally shows higher accuracy across the folds compared to Logistic Regression.\n",
+    "- Precision: XGBoost tends to have higher precision, indicating better performance in predicting delayed flights correctly.\n",
+    "- Recall: XGBoost also shows higher recall, meaning it is better at identifying actual delayed flights.\n",
+    "- F1-Score: The F1-score, which balances precision and recall, is consistently higher for XGBoost.\n",
+    "- Macro and Weighted Averages: Both the macro and weighted averages for precision, recall, and F1-score are higher for XGBoost, indicating better overall performance.\n",
+    "\n",
+    "Given these observations, XGBoost appears to be the better-performing model for this particular problem. It consistently outperforms Logistic Regression in terms of accuracy, precision, recall, and F1-score across all folds, making it more suitable for handling the class imbalance and providing more reliable predictions for delayed flights.\n",
+    "\n",
+    "In order to support this findings the conclusions in [1] stablish that the recall is most representative metric to measure the performance on this task, thereby if I take average recall for each kfold: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -3056,7 +3116,7 @@
        "1              XGBoost                0.644915                0.685429"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3073,6 +3133,22 @@
     "        combined_df.xs(('XGBoost', 'recall'), level=('model', 'metric'))['delayed_flights'].mean()\n",
     "    ] \n",
     "})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is clear that XGBoost, on average, tends to have better performance than the Logistic Regression model. Therefore, the selected model to deploy in production is XGBoost. However, in an ideal environment, one would expect to have knowledge about a 'production metric' in order to measure the performance of the model in production, but I could not infer any such metric due to my lack of experience in this airline field."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "\n",
+    "[1] Khaksar, Hassan, and Abdolrreza Sheikholeslami. \"Airline delay prediction by machine learning algorithms.\" Scientia Iranica 26.5 (2019): 2689-2702."
    ]
   }
  ],
